<resources>
    <string name="app_name">我的App</string>
    <string name="login">登录</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="add_item">添加</string>
    <string name="remove_item">删除</string>
    <string name="title_activity_login">登录</string>
    <string name="prompt_email">邮箱</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="error_invalid_email">Email地址无效</string>
    <string name="error_invalid_password">密码长度过短</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">必填项</string>
    <string name="permission_rationale">"需要身份允许以供邮件补全"</string>
    <string name="mainFrame_items">主要功能</string>
    <string name="app_history">历史数据</string>
    <string name="app_broadcast">广播消息</string>
    <string name="app_broadcast_hint">输入待广播消息</string>
    <string name="app_query_version">查询版本</string>
    <string name="app_version">版本信息: </string>
    <string name="app_feedback">反向控制</string>
    <string name="app_clientId">客户端编号</string>
    <string name="cancel">取消</string>
    <string name="app_query">查询</string>
    <string name="commit">确定</string>
    <string name="title">选择时间</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="select_time">选择时间</string>
    <string name="start_time">起始时间</string>
    <string name="end_time">截止时间</string>
    <string name="wrong_time_tip">开始时间应该不超过截止时间！</string>
    <string name="title_activity_line_chart">LineChartActivity</string>
    <string name="time">时间</string>
    <string name="value">数值</string>
</resources>

